--- a/.github/workflows/e2e.workflow.yml
+++ b/.github/workflows/e2e.workflow.yml
@@ -2,8 +2,9 @@
 name: e2e
 
 on:
-  schedule:
-    - cron: 25 6 * * *
+  dispatch
+ # schedule:
+ #   - cron: 25 6 * * *
 
 jobs:
   initialize-tfc-resources:
